--- a/style.css
+++ b/style.css
@@ -87,9 +87,7 @@ input::-webkit-inner-spin-button {
 .subTitle{
    text-shadow: 1px 1px #4e4376 ; 
 }
-.optionsContainer{
-  
-}
+
 .firstRow, .secondRow, .thirdRow{
     list-style: none;
 }
@@ -118,9 +116,6 @@ input::-webkit-inner-spin-button {
     transition: 0.5s;
 }
 
-button{
-
-}
 
 
 /*Third Section Style */
@@ -150,4 +145,52 @@ button{
     background-position: left;
     background-size: 30px;
 
+}
+
+/*Four Section Style */
+
+.fourSection{
+padding: 1em;
+   font-family: "Space Mono";
+   color: #ffffff;
+   font-size: 2.2em;
+   line-height: 24px;
+   font-weight: bold;
+   border-radius:  43px 43px ;
+   background-color: rgba(0, 54, 75, 0.89);
+   margin-top: 2em;
+   cursor: pointer;
+   width: auto;
+   text-decoration: none;
+   text-align: center;
+   width: auto;
+   height: 400px ;
+   background-color:#F3F9FA ;
+}
+
+.reset{
+    width: 80%;
+    height: auto;
+    padding: 0.5em;
+    font-size: 1.5em;
+    line-height: 29.62px;
+}
+
+.labelResult{
+    color: #011116d8;
+}
+
+.result{
+    color: #011116d8;
+    font-weight: bolder;
+    text-align: right;
+    font-size: 2em;
+}
+ul{
+    list-style: none;
+   padding: 1em;
+}
+
+span{
+     color: #7f9d9f;
 }
