--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@
 }
 
 body{
- 
+    height: auto;
     background: #2b5876; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #2b5876, #4e4376); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2b5876, #4e4376);
+    
 }
 /*Header Style */
 .Title{
@@ -31,10 +32,10 @@ header{
 
 .Main{
     background-color:rgba(255, 255, 255, 1) ;
-    height: auto;
+    height: 100%;
     padding: 3em;
     border-radius: 43px 43px 0 0;
-    
+    box-sizing: border-box;
 }
 
 /*First Section Style */
@@ -160,11 +161,11 @@ input::-webkit-inner-spin-button {
    border-radius:  43px 43px ;
    background-color: rgba(0, 54, 75, 0.89);
    margin-top: 2em;
-   cursor: pointer;
+   
    text-decoration: none;
    text-align: center;
    width: auto;
-   height: 400px ;
+   height: auto;
    background-color:#F3F9FA ;
 }
 
@@ -197,14 +198,11 @@ span{
 }
 /*Media Queries */
      
-  @media only screen and (min-width: 700px){
-    .Main{
-      height: max-content;
-    }
-
-  }
+ 
   @media only screen and (min-width: 1025px){
-      
+      body{
+          padding: 1.5rem;
+      }
     /*Global Section Styles */
     .Main{
        width: 70%;
@@ -281,7 +279,7 @@ span{
     }
     .reset{
         width: 80%;
-        margin-top: 3em;
+        margin-top: .8em;
     }
 
   }
